// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP On Demand Audio Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`AMP On Demand Audio Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP On Demand Audio Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP On Demand Audio Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=68&p=pashto.bbc_pashto_radio.w172xjcjkv7gw1w.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Apips%3Ap0340yr4]&x2=[amp]&x3=[news-pashto]&x4=[ps]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[%D9%88%D8%B1%D9%88%D8%B3%D8%AA%D9%8A%2520%D8%AE%D8%A8%D8%B1%D9%88%D9%86%D9%87%2520-%2520BBC%2520News%2520%D9%BE%DA%9A%D8%AA%D9%88]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP On Demand Audio Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Pashto, Pashto - Radio",
    "title": "وروستي خبرونه - BBC News پښتو",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP On Demand Audio Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 2`] = `
{
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 3`] = `
{
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 4`] = `
{
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 5`] = `
{
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 7`] = `
{
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/send/u50853533",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 8`] = `
{
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP On Demand Audio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`AMP On Demand Audio Page Footer Paragraphs should match text 1`] = `"© 2024 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`AMP On Demand Audio Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 1`] = `
{
  "text": "کور پاڼه",
  "url": "/pashto",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 2`] = `
{
  "text": "افغانستان",
  "url": "/pashto/topics/cr50y57xj52t",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 3`] = `
{
  "text": "پښتونخوا",
  "url": "/pashto/topics/cz74k7wy49jt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 4`] = `
{
  "text": "نړۍ",
  "url": "/pashto/topics/cxe2wdp2dv3t",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 5`] = `
{
  "text": "ښځې",
  "url": "/pashto/topics/cr50y5rq23gt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 6`] = `
{
  "text": "لوبې",
  "url": "/pashto/topics/cr50y59q860t",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 7`] = `
{
  "text": "ويډيوګانې",
  "url": "/pashto/topics/c2m45zyk0mmt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 8`] = `
{
  "text": "ځانګړې پاڼې",
  "url": "/pashto/in-depth-54540873",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 9`] = `
{
  "text": "کالم",
  "url": "/pashto/columns-54029178",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 10`] = `
{
  "text": "پر سټلایت خپرونې",
  "url": "/pashto/articles/c4n55eygdn0o",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 11`] = `
{
  "text": "راډیویې خپرونې",
  "url": "/pashto/topics/c9xz1ekw79nt",
}
`;

exports[`AMP On Demand Audio Page I can see the brand title 1`] = `"وروستي خبرونه"`;

exports[`AMP On Demand Audio Page I can see the episode summary 1`] = `"د نړۍ وروستي خبرونه"`;

exports[`AMP On Demand Audio Page I can see the episode title 1`] = `"۱۸ می ۲۰۲۰"`;

exports[`AMP On Demand Audio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p08b23c8.png"`;

exports[`AMP On Demand Audio Page Main heading should match text 1`] = `"وروستي خبرونه, ۱۸ می ۲۰۲۰"`;

exports[`AMP On Demand Audio Page Media Player a11y assistive technology can read the media player title 1`] = `"اډیو پلیئر"`;

exports[`AMP On Demand Audio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_pashto_radio/w172xjcjkv7gw1w/ps/amp?morph_env=live"`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "غږ, وروستي خبرونه, ۱۵ ډیسمبر ۲۰۲۰,  موده ۰۳،۰۰  موده ۰۳:۰۰",
  "url": "/pashto/bbc_pashto_radio/w172xqk2y7ktdkg",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "غږ, وروستي خبرونه, ۱۵ ډیسمبر ۲۰۲۰,  موده ۰۳،۰۰  موده ۰۳:۰۰",
  "url": "/pashto/bbc_pashto_radio/w172xqk2y7kt8tb",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "غږ, وروستي خبرونه, ۱۵ ډیسمبر ۲۰۲۰,  موده ۰۳،۰۰  موده ۰۳:۰۰",
  "url": "/pashto/bbc_pashto_radio/w172xqk2y7kt526",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "غږ, وروستي خبرونه, ۱۵ ډیسمبر ۲۰۲۰,  موده ۰۳،۰۰  موده ۰۳:۰۰",
  "url": "/pashto/bbc_pashto_radio/w172xqk2y7kt1b2",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/pashto/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-72x72.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-96x96.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-128x128.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-144x144.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-152x152.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-180x180.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-384x384.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-512x512.png",
}
`;

exports[`AMP On Demand Audio Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_radio/p0340yr4"`;

exports[`AMP On Demand Audio Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP On Demand Audio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP On Demand Audio Page SEO Heading level 1 1`] = `"وروستي خبرونه, ۱۸ می ۲۰۲۰"`;

exports[`AMP On Demand Audio Page SEO Lang attribute 1`] = `"ps"`;

exports[`AMP On Demand Audio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ps",
        "name": "Pashto",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/pashto/bbc_pashto_radio/p0340yr4",
        "@type": "WebPage",
        "name": "وروستي خبرونه",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
          "width": 1024,
        },
        "name": "BBC News پښتو",
        "publishingPrinciples": "https://www.bbc.com/pashto/institutional-49283007",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
      "url": "http://localhost:7080/pashto/bbc_pashto_radio/p0340yr4",
    },
    {
      "@type": "AudioObject",
      "description": "د نړۍ وروستي خبرونه",
      "duration": "PT3M",
      "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_pashto_radio/w172xjcjkv7gw1w/ps/amp?morph_env=live",
      "name": "وروستي خبرونه",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p08b23c8.png",
      "uploadDate": "2020-05-18T00:00:00.000Z",
    },
  ],
}
`;

exports[`AMP On Demand Audio Page SEO OG description 1`] = `"د نړۍ وروستي خبرونه"`;

exports[`AMP On Demand Audio Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b23c8.png"`;

exports[`AMP On Demand Audio Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`AMP On Demand Audio Page SEO OG locale 1`] = `"ps"`;

exports[`AMP On Demand Audio Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`AMP On Demand Audio Page SEO OG title 1`] = `"وروستي خبرونه - BBC News پښتو"`;

exports[`AMP On Demand Audio Page SEO OG type 1`] = `"website"`;

exports[`AMP On Demand Audio Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_radio/p0340yr4"`;

exports[`AMP On Demand Audio Page SEO Page title 1`] = `"وروستي خبرونه - BBC News پښتو"`;

exports[`AMP On Demand Audio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP On Demand Audio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP On Demand Audio Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`AMP On Demand Audio Page SEO Twitter description 1`] = `"د نړۍ وروستي خبرونه"`;

exports[`AMP On Demand Audio Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`AMP On Demand Audio Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b23c8.png"`;

exports[`AMP On Demand Audio Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`AMP On Demand Audio Page SEO Twitter title 1`] = `"وروستي خبرونه - BBC News پښتو"`;

exports[`AMP On Demand Audio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"وروستي خبرونه, ۱۸ می ۲۰۲۰"`;
